--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Balls caught:</h3>
     <div class="ballsCaught">0</div>
   </div>
+  <button onclick="restart()">Restart</button>
   <table>
     <tbody class="board"></tbody>
   </table>
